Opened 13 years ago
Closed 13 years ago
#1181 closed bug (fixed)
B_UTF8_ELLIPSIS not used consistently in Deskbar's menu
Reported by: | jonas.kirilla | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/Deskbar | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Has a Patch: | no | Platform: | All |
Description
'About Haiku', 'Restart' and 'Shut Down' should be followed by B_UTF8_ELLIPSIS.
http://haiku-os.org/development/faq "menus/buttons that open a dialog should end with "...", i.e.: B_UTF8_ELLIPSIS"
Attachments (1)
Change History (2)
by , 13 years ago
Attachment: | BeMenu.cpp.diff added |
---|
comment:1 by , 13 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
Thanks, I've applied it in hrev21157.
Note:
See TracTickets
for help on using tickets.
Corrected patch that doesn't change the R5 Deskbar.