Added another patch by Jonas: this one adds the ellipsis to Shutdown/Restart in the Deskbar (see ticket #1181). Thanks!

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@21157 a95241bf-73f2-0310-859d-f6bbb57e9c96